# pyairtel

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: index.html
pyairtel/: __init__.py  auth.py  client.py  collection.py  disbursement.py  exceptions.py  utils.py
tests/: test_pyairtel.py
